<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="mode_ready">Ready!!</string>
	<string name="mode_pause">Press Up To Resume</string>
	<string name="mode_lose_prefix">Game Over\nScore: </string>
	<string name="mode_lose_suffix">\nPress Up To Play</string>
	<string name="btn_Start_Caption">Start</string>
	<string name="apptitle">PushPush!!!</string>

	<string name="empty_string"></string>

	<string name="new_game_title">Difficulty</string>
	<string name="easy_label">Easy</string>
	<string name="medium_label">Medium</string>
	<string name="hard_label">Hard</string>

	<string name="settings_label">Settings...</string>
	<string name="settings_title">Game Settings</string>
	<string name="settings_shortcut">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music?</string>
	<string name="cancel_title">Cancel</string>
	<string name="cancel_summary">Return to the previous step, you want to use?</string>

	<!-- Message  -->
	<string name="msg_clear">Level Clear!!</string>
	<string name="msg_ending">The End!!</string>
	<string name="msg_notfoundsavedata">There are no records saved.</string>
	<string name="change_iconsize">Icon size auto change is </string>
	<string name="notfound_playback">Can not find revert step.</string>
	<string name="saved_step_play">Play the step is stored</string>
	<string name="cancel_step_play">Back</string>
	<string name="about_help_label"><![CDATA[About & Help]]></string>

	<!-- Button  -->
	<string name="continue_label">Continue</string>
	<string name="new_game_label">Difficulty</string>
	<string name="prev_level">Prev</string>
	<string name="next_level">Next</string>

	<string name="reload_level">Reload</string>
	<string name="save_level">Save</string>
	<string name="play_level">Play</string>



	<string name="alert_title">
		<b>Congratulation~</b>
	</string>
	<string name="alert_text">
		\
		<H>Storekeeper</H>
		\n
		<b>Level Clear !!!</b>
	</string>


	<string name="title_list_preference">Icon Size</string>
	<string name="summary_list_preference">In order to apply the changes and restart.</string>
	<string name="dialog_title_list_preference">List of sizes available</string>
	<string name="sharedUserLabel">jeongjaehong@gmail.com</string>
	<string name="backfile_not_found">백업파일이 없습니다.</string>
	<string name="backupfile_can_not_read">백업파일을 읽을 수 없습니다.</string>
	<string name="import_successful_msg">Import successful!</string>
	<string name="import_failed_msg">"Import failed - "</string>
	<string name="importing_database_msg">Importing database...</string>
	<string name="importing_dialog_msg">Importing database...</string>
	<string name="export_failed">Export failed</string>
	<string name="export_successful_msg">Export successful!</string>
	<string name="exporting_database_msg">Exporting database...</string>
	<string name="external_storage_is_not_available_unable_to_export_data_">External storage is not available, unable to export data.</string>
	<string name="are_you_sure_this_will_overwrite_any_existing_backup_data_">Are you sure (this will overwrite any existing backup data)?</string>
	<string name="yes">Yes</string>
	<string name="are_you_sure_this_will_overwrite_existing_current_data_">Are you sure (this will overwrite existing current data)?</string>
	<string name="importing_database_from_external_storage_and_resetting_database">importing database from external storage, and resetting database</string>
	<string name="pushpushiii">PushPushIII</string>
	<string name="data_manage">Data Manage</string>
	<string name="about_help">About &amp; Help</string>
	<string name="dragmove_msg">Drag and move you want to use?</string>
	<string name="drag_move_title">Drag Move</string>


</resources>
